add link to license in README

--- a/README
+++ b/README
@@ -6,4 +6,5 @@ to my liking. At the top of each file you will find a description of what the sc
 
 Please feel free to fork/contribute to these scripts !
 
-Unless specified otherwise, all the scripts are licensed under the GPLv3.
+Unless specified otherwise, all the scripts are licensed under the GPLv3. 
+The license is available at the following page : http://www.gnu.org/licenses/gpl-3.0.txt
